Use stable faker version
Without this, and because for now, the stable `FactoryMuffin`
used by the `gourmet/muffin` plugin requires the 1.4 version
explicitly, this is the only way.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		, "source": "http://github.com/gourmet/faker"
 	}
 	, "require": {
-		"fzaninotto/faker": "dev-master"
+		"fzaninotto/faker": "1.4.*"
 	}
 	, "require-dev": {
 		"cakephp/cakephp": "3.0.*",
